# CozyChorusSuite

./: .clang-format  .editorconfig  .gitignore  CLAUDE.md  CMakeLists.txt  CPP-STYLE-GUIDE.md  DEVLOG.md
Source/: Parameters.h  PluginProcessor.cpp  PluginProcessor.h
Source/Editor/: CCSAudioProcessorEditor.cpp  CCSAudioProcessorEditor.h
Source/dsp/: ChorusEffect.cpp  ChorusEffect.h  FlangerEffect.cpp  FlangerEffect.h  LFO.cpp  LFO.h  ModulationEffect.h  NullEffect.h  PhaserEffect.cpp  PhaserEffect.h  VibeEffect.cpp  VibeEffect.h
